[tool.poetry]
name = "sseclient"
version = "0.0.27.1"
authors = ["Brent Tubbs"]
description = "Fork from btubbs/sseclient"
license = "MIT"
repository = "https://pypi.extrality.ai/simple/"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"
requests_toolbelt = "^0.9.1"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
